--- a/deploy/src/crd.yaml
+++ b/deploy/src/crd.yaml
@@ -4449,6 +4449,18 @@ spec:
                                     x-kubernetes-int-or-string: true
                                   type: object
                               type: object
+                            readiness:
+                              properties:
+                                initialDelaySeconds:
+                                  format: int32
+                                  type: integer
+                                periodSeconds:
+                                  format: int32
+                                  type: integer
+                                timeoutSeconds:
+                                  format: int32
+                                  type: integer
+                              type: object
                           type: object
                         deployment:
                           properties:
@@ -9308,6 +9320,18 @@ spec:
                                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                         x-kubernetes-int-or-string: true
                                       type: object
+                                  type: object
+                                readiness:
+                                  properties:
+                                    initialDelaySeconds:
+                                      format: int32
+                                      type: integer
+                                    periodSeconds:
+                                      format: int32
+                                      type: integer
+                                    timeoutSeconds:
+                                      format: int32
+                                      type: integer
                                   type: object
                               type: object
                             deployment:
