--- a/resources/helm/v2.0/istio-control/istio-discovery/templates/deployment.yaml
+++ b/resources/helm/v2.0/istio-control/istio-discovery/templates/deployment.yaml
@@ -92,13 +92,15 @@ spec:
           - name: webhook
             containerPort: 15017
           - containerPort: 15053
+{{- if Values.pilot.readiness }}
           readinessProbe:
             httpGet:
               path: /ready
               port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 5
+            initialDelaySeconds: {{ .Values.pilot.readinessInitialDelaySeconds }}
+            periodSeconds: {{ .Values.pilot.readinessPeriodSeconds }}
+            timeoutSeconds: {{ .Values.pilot.readinessTimeoutSeconds }}
+{{- end }}
           env:
           - name: ENABLE_MAISTRA_EXTENSIONS
             value: "{{ .Values.wasmExtensions.enabled }}"
