--- a/resources/helm/v2.0/mesh-config/templates/enable-mesh-mtls.yaml
+++ b/resources/helm/v2.0/mesh-config/templates/enable-mesh-mtls.yaml
@@ -29,7 +29,9 @@ metadata:
     app: istio
     release: {{ .Release.Name }}
 spec:
+  {{- if .Values.global.proxy.clusterDomain }}
   host: "*.local"
+  {{- end }}
   {{- if .Values.global.defaultConfigVisibilitySettings }}
   exportTo:
   - '*'
