--- a/resources/helm/v2.1/istio-control/istio-discovery/values.yaml
+++ b/resources/helm/v2.1/istio-control/istio-discovery/values.yaml
@@ -23,6 +23,15 @@ pilot:
       cpu: 500m
       memory: 2048Mi
 
+  # Default readinessProbe Values
+  readinessProbe:
+    httpGet:
+      path: /ready
+      port: 8080
+    initialDelaySeconds: 1
+    periodSeconds: 3
+    timeoutSeconds: 5
+
   env: {}
 
   cpu:
