--- a/deploy/servicemesh-operator.yaml
+++ b/deploy/servicemesh-operator.yaml
@@ -10603,7 +10603,7 @@ metadata:
   name: istio-operator-account-istio-operator-cluster-role-binding
 subjects:
 - kind: ServiceAccount
-  namespace: istio-operator
+  namespace: openshift-operators
   name: istio-operator
 roleRef:
   kind: ClusterRole
@@ -10616,7 +10616,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: istio-operator
-  namespace: istio-operator
+  namespace: openshift-operators
 
 ---
 
@@ -10624,7 +10624,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: maistra-admission-controller
-  namespace: istio-operator
+  namespace: openshift-operators
   annotations:
     service.beta.openshift.io/serving-cert-secret-name: maistra-operator-serving-cert
 spec:
@@ -10642,7 +10642,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: istio-operator
-  namespace: istio-operator
+  namespace: openshift-operators
 spec:
   replicas: 1
   selector:
