correct template typo

--- a/resources/helm/v2.0/istio-control/istio-discovery/templates/deployment.yaml
+++ b/resources/helm/v2.0/istio-control/istio-discovery/templates/deployment.yaml
@@ -92,7 +92,7 @@ spec:
           - name: webhook
             containerPort: 15017
           - containerPort: 15053
-{{- if Values.pilot.readiness }}
+{{- if .Values.pilot.readiness }}
           readinessProbe:
             httpGet:
               path: /ready
