--- a/resources/helm/v2.0/istio-control/istio-discovery/values.yaml
+++ b/resources/helm/v2.0/istio-control/istio-discovery/values.yaml
@@ -23,14 +23,11 @@ pilot:
       memory: 2048Mi
 
   # Default readinessProbe values
-  readinessProbe:
-    httpGet:
-      path: /ready
-      port: 8080
+  readiness:
     initialDelaySeconds: 5
     periodSeconds: 5
     timeoutSeconds: 5
-    
+
   # Applications namespace list pilot manages
   appNamespaces: []
 
