--- a/resources/helm/overlays/mesh-config/templates/enable-mesh-mtls.yaml
+++ b/resources/helm/overlays/mesh-config/templates/enable-mesh-mtls.yaml
@@ -27,9 +27,7 @@ metadata:
     app: istio
     release: {{ .Release.Name }}
 spec:
-  {{- if .Values.global.proxy.clusterDomain }}
-  host: "*.local"
-  {{- end }}
+  host: "*.{{ .Values.global.proxy.clusterDomain }}"
   {{- if .Values.global.defaultConfigVisibilitySettings }}
   exportTo:
   - '*'
