--- a/resources/helm/v2.1/istio-control/istio-discovery/values.yaml
+++ b/resources/helm/v2.1/istio-control/istio-discovery/values.yaml
@@ -24,10 +24,7 @@ pilot:
       memory: 2048Mi
 
   # Default readinessProbe Values
-  readinessProbe:
-    httpGet:
-      path: /ready
-      port: 8080
+  readiness:
     initialDelaySeconds: 1
     periodSeconds: 3
     timeoutSeconds: 5
